// Licensed to SolID under one or more contributor
// license agreements. See the NOTICE file distributed with
// this work for additional information regarding copyright
// ownership. SolID licenses this file to you under
// the Apache License, Version 2.0 (the "License"); you may
// not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing,
// software distributed under the License is distributed on an
// "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
// KIND, either express or implied.  See the License for the
// specific language governing permissions and limitations
// under the License.

syntax = "proto3";

package oidc.core.v1;

option go_package = "oidc/core/v1;corev1";

import "oidc/core/v1/client.proto";
import "oidc/core/v1/error.proto";
import "google/protobuf/wrappers.proto";

// -----------------------------------------------------------------------------

service ClientAuthenticationAPI {
  rpc Authenticate(ClientAuthenticationRequest) returns (ClientAuthenticationResponse) {};
}

// https://tools.ietf.org/html/rfc7591
service ClientRegistrationAPI {
  rpc Register(ClientRegistrationRequest) returns (ClientRegistrationResponse) {};
}

// -----------------------------------------------------------------------------

message ClientAuthenticationRequest {
  google.protobuf.StringValue client_id = 1;
  google.protobuf.StringValue client_secret = 2;
  google.protobuf.StringValue client_assertion_type = 3;
  google.protobuf.StringValue client_assertion = 4;
}

message ClientAuthenticationResponse {
  Error error = 1;
  Client client = 2;
}

// -----------------------------------------------------------------------------

// https://tools.ietf.org/html/rfc7591#section-2
message ClientRegistrationRequest {
  ClientMeta metadata = 1;
}

message ClientRegistrationResponse {
  Error error = 1;
  Client client = 2;
}
